<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Websocket Client</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_tab01">Tab01Activity</string>
    <string name="title_activity_tab02">Tab02Activity</string>
    <string name="title_activity_tab04">Tab04Activity</string>
    <string name="title_activity_chat">ChatActivity</string>

    <!-- tab页顶部标题栏 -->
    <string name="top_title_left01">Left01</string>
    <string name="top_title_middle01">Middle01</string>
    <string name="top_title_right01">Right01</string>

    <!-- tab页顶部标题 -->
    <string name="top_title01">Friend list</string>
    <string name="top_title02">Joke area</string>
    <string name="top_title03">Other</string>
    <string name="top_title04">My space</string>

    <!-- tab页底部菜单栏 -->
    <string name="bottom_menu_01">Friend</string>
    <string name="bottom_menu_02">Joke</string>
    <string name="bottom_menu_03">Other</string>
    <string name="bottom_menu_04">My</string>

    <!-- tab04页菜单 -->
    <string name="turing_robot">Turing Robot</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>

    <!-- 设置页 -->
    <string name="msg_switch">Message Switch</string>

    <!-- 登录 -->
    <string name="login">Login</string>
    <string name="logout">Exit</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- 消息 -->
    <string name="msg_input_hint">Please enter your message here</string>
    <string name="msg_send">Send</string>
    <string name="msg_send_login_first">Please login first before sending message</string>

    <!-- 好友 -->
    <string name="friend_watch">Friend</string>
    <string name="title_activity_about">AboutActivity</string>

    <!-- 网络 -->
    <string name="network_available">网络连接处于正常状态</string>
    <string name="network_unavailable">你的网络有问题,请检查网络连接是否正常</string>
    <string name="network_not_wifi">正在使用数据网络,请注意数据流量</string>
    <string name="network_wifi_switch_closed">请检查Wifi是否正处于关闭状态</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_radar">RadarActivity</string>
    <string name="title_activity_fab">FabActivity</string>
    <string name="title_activity_select">SelectActivity</string>
    <string name="title_activity_chart">ChartActivity</string>

</resources>